WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231188
[clang 13] Suppress sign comparison warnings
https://bugs.webkit.org/show_bug.cgi?id=231188
Summary
[clang 13] Suppress sign comparison warnings
Basuke Suzuki
Reported
2021-10-04 12:16:10 PDT
C:/PSDev/webkit/Source/JavaScriptCore\inspector/remote/socket/RemoteInspectorSocket.cpp:273:68: warning: comparison of integers of different signs: 'int' and 'unsigned long' [-Wsign-compare] if (FileSystem::readFromFile(handle, buffer.data(), *size) == *size) ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ ^ ~~~~~ 1 warning generated.
Attachments
Patch
(1.64 KB, patch)
2021-10-19 10:54 PDT
,
Chris Dumez
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2021-10-11 12:17:24 PDT
<
rdar://problem/84110570
>
Chris Dumez
Comment 2
2021-10-19 10:54:08 PDT
Created
attachment 441756
[details]
Patch
EWS
Comment 3
2021-10-19 12:49:58 PDT
Committed
r284480
(
243239@main
): <
https://commits.webkit.org/243239@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 441756
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug