[clang 13] Suppress sign comparison warnings https://bugs.webkit.org/show_bug.cgi?id=231188 <rdar://problem/84110570>

Reviewed by Alex Christensen.

* inspector/remote/socket/RemoteInspectorSocket.cpp:
(Inspector::RemoteInspector::backendCommands const):


Canonical link: https://commits.webkit.org/243239@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@284480 268f45cc-cd09-0410-ab3c-d52691b4dbfc